681 - SQStringHashProvider 630 - Add a constructor for QStringUnicode that receives a wchar_t Done.

--- a/trunk/projects/CodeLite/QuimeraEngine/Tools/Tools.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/Tools/Tools.project
@@ -201,6 +201,8 @@
     <File Name="../../../../headers/QDictionary.h"/>
     <File Name="../../../../headers/QHashtable.h"/>
     <File Name="../../../../headers/SQIntegerHashProvider.h"/>
+    <File Name="../../../../headers/SQStringHashProvider.h"/>
+    <File Name="../../../../source/SQStringHashProvider.cpp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Time">
     <File Name="../../../../headers/QDateTime.h"/>
