--- a/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
@@ -105,6 +105,7 @@
       <File Name="../../../../tests/unit/testmodule_tools/QDictionary_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_tools/QHashtable_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_tools/SQIntegerHashProvider_Test.cpp"/>
+      <File Name="../../../../tests/unit/testmodule_tools/SQStringHashProvider_Test.cpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="Time">
       <File Name="../../../../tests/unit/testmodule_tools/QDateTime_Test.cpp" ExcludeProjConfig=""/>
