580 - Define some macros to facilitate the call stack tracing Done. Added the QE_PRINT_FUNCTION definition.

--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -164,6 +164,7 @@
     <File Name="../../../../source/QCallStackTracer.cpp"/>
     <File Name="../../../../headers/QScopedCallTraceNotifier.h"/>
     <File Name="../../../../source/QScopedCallTraceNotifier.cpp"/>
+    <File Name="../../../../headers/CallStackTracingDefinitions.h"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Threading">
     <File Name="../../../../headers/QThread.h"/>
