704 - Simplify QBasicArray and introduce QArrayResult Done. All the dependent files adapted.

--- a/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
@@ -121,6 +121,7 @@
     <File Name="../../../../headers/QBasicArray.h"/>
     <File Name="../../../../source/SQAnyTypeToStringConverter.cpp"/>
     <File Name="../../../../headers/SQAnyTypeToStringConverter.h"/>
+    <File Name="../../../../headers/QArrayResult.h"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Memory">
     <File Name="../../../../headers/AllocationOperators.h"/>
