--- a/trunk/testing/projects/CodeLite/QEUnitTests/Common/Common.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/Common/Common.project
@@ -88,6 +88,7 @@
       <File Name="../../../../tests/unit/testmodule_common/QCharIterator_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_common/QBasicArray_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_common/SQAnyTypeToStringConverter_Test.cpp"/>
+      <File Name="../../../../tests/unit/testmodule_common/QArrayResult_Test.cpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="Memory">
       <File Name="../../../../tests/unit/testmodule_common/AllocationOperators_Test.cpp"/>
