679 - QConstHashtableIterator Done. QHashtable's copy constructor implemented along with its unit tests. Some warnings suppressed in QFixedArray with GCC. Some TODOs in both QDictionary's and QHashtable's unit tests solved.

--- a/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
@@ -107,6 +107,7 @@
       <File Name="../../../../tests/unit/testmodule_tools/SQIntegerHashProvider_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_tools/SQStringHashProvider_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_tools/QConstDictionaryIterator_Test.cpp"/>
+      <File Name="../../../../tests/unit/testmodule_tools/QConstHashtableIterator_Test.cpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="Time">
       <File Name="../../../../tests/unit/testmodule_tools/QDateTime_Test.cpp" ExcludeProjConfig=""/>
