--- a/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
@@ -457,7 +457,7 @@
         <Command Enabled="yes">cmd /c copy "$(EXECUTION_PATH)..\..\..\..\..\bin\MinGW\$(ConfigurationName)\QuimeraEngineTools.dll" "$(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
         <Command Enabled="yes">cmd /c copy "$(EXECUTION_PATH)..\..\..\..\..\bin\MinGW\$(ConfigurationName)\QuimeraEngineSystem.dll" "$(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
         <Command Enabled="yes">cmd /c if exist $(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)\artifacts rmdir $(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)\artifacts /s /q</Command>
-        <Command Enabled="yes">cmd /c xcopy $(EXECUTION_PATH)..\..\..\..\bin\artifacts $(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName) /Y /I /E /K /O</Command>
+        <Command Enabled="yes">cmd /c (robocopy $(EXECUTION_PATH)..\..\..\..\bin\artifacts $(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName) /E /COPYALL /V /FP) ^&amp; IF %ERRORLEVEL% LEQ 4 exit /B 0</Command>
       </PostBuild>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
@@ -519,7 +519,8 @@
         <Command Enabled="yes">cmd /c copy "$(EXECUTION_PATH)..\..\..\..\bin\NormalizationTest.txt" "$(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
         <Command Enabled="yes">cmd /c copy "$(EXECUTION_PATH)..\..\..\..\..\3rdparty\ICU\bin\Win32\ReleaseSharedrtDynamic\MinGW\*.dll" "$(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
         <Command Enabled="yes">cmd /c if exist $(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)\artifacts rmdir $(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)\artifacts /s /q</Command>
-        <Command Enabled="yes">cmd /c xcopy $(EXECUTION_PATH)..\..\..\..\bin\artifacts $(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName) /Y /I /E /K /O</Command>
+        <Command Enabled="yes">cmd /c (robocopy $(EXECUTION_PATH)..\..\..\..\bin\artifacts $(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName) /E /COPYALL /V /FP) ^&amp; IF %ERRORLEVEL% LEQ 4 exit /B 0</Command>
+        <Command Enabled="yes"/>
       </PostBuild>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
