701 - Quit containers dependency from EQEnumerations Done. Enumerations now do not depend on any container. Operator!= added to enumerations. Data types separated from string types. New header added. Now QStringUnicode includes all the enumerations it needs. Unit tests' checks adapted. Some warnings suppressed.

--- a/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
@@ -122,6 +122,7 @@
     <File Name="../../../../source/SQAnyTypeToStringConverter.cpp"/>
     <File Name="../../../../headers/SQAnyTypeToStringConverter.h"/>
     <File Name="../../../../headers/QArrayResult.h"/>
+    <File Name="../../../../headers/StringsDefinitions.h"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Memory">
     <File Name="../../../../headers/AllocationOperators.h"/>
